--- a/test/squid.conf
+++ b/test/squid.conf
@@ -1,2 +1,8 @@
+debug_options ALL,1 93,9
+
 http_port 8000
 http_access allow all
+
+icap_enable on
+icap_service icap_1 reqmod_precache icap://127.0.0.1:8001/request
+adaptation_access icap_1 allow all
