--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "mocha": "2.5.x",
     "request": "2.73.x",
     "should": "10.0.x"
+  },
+  "dependencies": {
+    "dec0de": "^0.1.2"
   }
 }
