--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "build/server.js",
   "scripts": {
-    "test": "npm run compile && mocha --timeout 5000 test/*.test.js",
+    "test": "npm run compile && mocha --timeout 5000 tst/*.test.js",
     "compile": "babel --plugins transform-async-to-generator -d build/ lib/",
     "prepublish": "npm run compile"
   },
