--- a/test/squid.conf
+++ b/test/squid.conf
@@ -1,8 +1,13 @@
 debug_options ALL,1 93,9
 
-http_port 8000
+http_port 44044
 http_access allow all
 
+pid_filename squid-kneecap
+access_log ./squid_access.log
+cache_log ./squid_cache.log
+
 icap_enable on
-icap_service icap_1 reqmod_precache icap://localhost:8001/request
+icap_service icap_1 reqmod_precache icap://localhost:44144/request
+icap_service_failure_limit 999
 adaptation_access icap_1 allow all
