--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "dec0de": "^0.2.0"
+    "dec0de": "^0.2.0",
+    "stream-splicer": "2.x"
   }
 }
